--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,6 @@
 body{
     background-color: #0f121f;
-    background-image: url(/static/stars.png);
+    background-image: url(/static/star2.jpg);
     background-repeat-y: no-repeat;
     color: #fff;
 }
@@ -68,7 +68,7 @@ nav button{
 }
 
 .article h2{
-    font-size: 1.2em;
+    font-size: 4em;
 }
 
 .article .author{
