--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -6,7 +6,7 @@
     {% for article in articles %}
         <div class="article">
             <h2><a href="{% url 'articles:detail' slug=article.slug %}">{{ article.title }}</a></h2>
-            <p>{{ article.body }}</p>
+            <p>{{ article.snippet }}</p>
             <p>{{ article.date }}</p>
             <p class="author">added by {{ article.author.username }}</p>
         </div>
