--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -3,12 +3,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Djangonauts</title>
-        <link rel="stylesheet" href="{% static 'styles.css' %}">
+        <title>Kunyong's Blog</title>
+        <link rel="stylesheet" href="/static/css/styles.css">
     </head>
     <body>
         <header class="wrapper">
-            <h1><a href="{% url 'home' %}"><img src="{% static 'logo.png' %}" alt="djangonautic" /></a></h1>
+            <h1><a href="{% url 'home' %}"><img src="/static/images/logo.pdf" alt="kunyong" /></a></h1>
             <nav>
                 <ul>
                     {% if user.is_authenticated %}
